Adopt to new requirements of KissenPaper